{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 30,
  "lineage": "036bdaba-20c8-b74c-b9cc-ff35e3e57ff1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:577133973072:internet-gateway/igw-0a1b75a25fcd04580",
            "id": "igw-0a1b75a25fcd04580",
            "owner_id": "577133973072",
            "tags": {
              "Name": "prism-igw",
              "Project": "prism"
            },
            "tags_all": {
              "Name": "prism-igw",
              "Project": "prism"
            },
            "vpc_id": "vpc-09ad7826d2823a2f0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:577133973072:route-table/rtb-0334f052477de0f77",
            "id": "rtb-0334f052477de0f77",
            "owner_id": "577133973072",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a1b75a25fcd04580",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prism-public-rt",
              "Project": "prism"
            },
            "tags_all": {
              "Name": "prism-public-rt",
              "Project": "prism"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ad7826d2823a2f0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa77d0303dfd08ea",
            "route_table_id": "rtb-0334f052477de0f77",
            "subnet_id": "subnet-0b80e152206c9d7d4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:577133973072:security-group/sg-027e36021bf419352",
            "description": "Security group des VMs pour les applications",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Tout le trafic sortant autorise",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-027e36021bf419352",
            "ingress": [
              {
                "cidr_blocks": [
                  "80.215.230.80/32"
                ],
                "description": "SSH pour Ansible",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "API backend (port 3001) depuis le load balancer",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b3918d656ca6051d"
                ],
                "self": false,
                "to_port": 3001
              },
              {
                "cidr_blocks": [],
                "description": "HTTP depuis le load balancer",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b3918d656ca6051d"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "prism-app-sg",
            "name_prefix": "",
            "owner_id": "577133973072",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prism-app-sg",
              "Project": "prism"
            },
            "tags_all": {
              "Name": "prism-app-sg",
              "Project": "prism"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ad7826d2823a2f0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.loadbalancer",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:577133973072:security-group/sg-0b3918d656ca6051d",
            "description": "Security group du load balancer Nginx",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Tout le trafic sortant autorise",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b3918d656ca6051d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP depuis internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS depuis internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "80.215.230.80/32"
                ],
                "description": "SSH pour Ansible",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "prism-lb-sg",
            "name_prefix": "",
            "owner_id": "577133973072",
            "revoke_rules_on_delete": null,
            "tags": {
              "Name": "prism-lb-sg",
              "Project": "prism"
            },
            "tags_all": {
              "Name": "prism-lb-sg",
              "Project": "prism"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ad7826d2823a2f0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:577133973072:subnet/subnet-08c78424919e08e97",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c78424919e08e97",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "577133973072",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prism-private-subnet",
              "Project": "prism"
            },
            "tags_all": {
              "Name": "prism-private-subnet",
              "Project": "prism"
            },
            "vpc_id": "vpc-09ad7826d2823a2f0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:577133973072:subnet/subnet-0b80e152206c9d7d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b80e152206c9d7d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "577133973072",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prism-public-subnet",
              "Project": "prism"
            },
            "tags_all": {
              "Name": "prism-public-subnet",
              "Project": "prism"
            },
            "vpc_id": "vpc-09ad7826d2823a2f0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:577133973072:vpc/vpc-09ad7826d2823a2f0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06bb8999a313ff561",
            "default_route_table_id": "rtb-0baccdff6d5bf111d",
            "default_security_group_id": "sg-08b268887d92180c8",
            "dhcp_options_id": "dopt-01e56ed2f2cffc708",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09ad7826d2823a2f0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0baccdff6d5bf111d",
            "owner_id": "577133973072",
            "tags": {
              "Name": "prism-vpc",
              "Project": "prism"
            },
            "tags_all": {
              "Name": "prism-vpc",
              "Project": "prism"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}